--- a/src/Bluepart/Bluepart.css
+++ b/src/Bluepart/Bluepart.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 
 .bluepart-container {
-  background-image: url('../assets/vector (21).png');
+  background-image: url('../assets/vector21.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
