--- a/src/Bluepart/Bluepart.css
+++ b/src/Bluepart/Bluepart.css
@@ -14,7 +14,7 @@
 }
 
 .bluepart-box {
-  background-image: url('../assets/vector (19).png'); /* blue box bg */
+  background-image: url('../assets/Vector (19).png'); /* blue box bg */
   background-size: 100% 100%;
   background-repeat: no-repeat;
   padding: 40px 30px;
