--- a/src/Brownpart/Brownpart.css
+++ b/src/Brownpart/Brownpart.css
@@ -63,7 +63,7 @@
 
 .blog-card {
   /* Do NOT put background-image or background here */
-  background: url('../assets/vector (40).png') no-repeat center/cover;
+  background: url('../assets/Vector (40).png') no-repeat center/cover;
 
   width: 220px;
   min-width: 220px;
