--- a/src/Orangepart/Orangepart.css
+++ b/src/Orangepart/Orangepart.css
@@ -8,6 +8,9 @@
   overflow: hidden;
 }
 
+#orangepart img{
+     left: 90%;
+}
 #Orangepart-heading {
   font-size: 28px;
   font-weight: bold;
@@ -57,11 +60,11 @@
 
 #card1-bg, #card2-bg, #card3-bg, #card4-bg {
   position: absolute;
-  width: 130%;
+  width: 200%;
   height: 110%;
   top: -5%;     
   left: -5%;    
-  object-fit: cover;
+  object-fit:fill;
   z-index: 1;
 }
 
@@ -70,7 +73,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 24px;
+  width: 30px;
   z-index: 3;
 }
 
